syntax = "proto3";

package servicios_streaming;

// CAMBIA la siguiente línea:
// llamada 'servicios_streaming' dentro del directorio de salida.
option go_package = "./servicios_streaming";

// El servicio de audio.
service AudioService {
    rpc StreamAudio(PeticionDTO) returns (stream FragmentoCancion);
}

// Mensaje de Petición
message PeticionDTO {
    string titulo = 1;
}

// Mensaje de Respuesta
message FragmentoCancion {
    bytes data = 1;
}